# color-me

./: .coverage  .coverage 2  .coveragerc  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Makefile  PROJECT_PLAN.md  README.md  TICKETS.md  docker-compose.yml
docs/: CONTRIBUTING.md  KNOWN_ISSUES.md  ML_OPTIMIZATION_SUMMARY.md  ML_REQUIREMENTS.md  ML_TRAINING_COMPLETE.md  ML_TRAINING_EXECUTION_PLAN.md  ML_TRAINING_PHASES_BREAKDOWN.md  ML_TRAINING_PLAN.md  ML_TRAINING_QUICKSTART.md  MOBILE_PLAN.md  PALETTE_UX.md  PAYLOAD_FORMAT.md  PHASE_1_COMPLETION_REPORT.md  REQUEST_ID_AND_OPENAPI.md  UX_MESSAGES.md  bff-design.md  infra-plan.md  ml-api-design.md  mobile-design.md  phase-map.md
scripts/: verify.sh
services/ml-api/: .coverage  Dockerfile  model_registry.json  pyproject.toml  requirements.txt
services/ml-api/app/: main.py
services/ml-api/app/core/: errors.py  media.py  models.py  output_store.py  palette.py  pipeline.py  postprocess.py  recolor.py  segmenter.py
services/ml-api/app/middleware/: request_id.py
services/ml-api/app/schemas/: __init__.py  tryon.py
services/ml-api/tests/: conftest.py  test_e2e_smoke.py  test_errors.py  test_fixture_loader.py  test_main_handlers.py  test_media_helpers.py  test_media_limits.py  test_models_and_segmenter.py  test_models_cache.py  test_output_store.py  test_pipeline_modules.py  test_postprocess.py  test_request_id.py  test_segmentation_benchmark.py  test_segmentation_quality.py  test_segmenter_internal.py  test_tryon.py  test_tryon_api.py
services/ml-api/tests/fixtures/: .gitignore  README.md
(+73 files in other folders)
